# oltpim-engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
dpu/: btree.c  gc.c  main.c  object.c  oid.c  requests.c  version.c  wset.c
include/: common.h  interface.h
include/dpu/: btree.h  gc.h  global.h  object.h  oid.h  requests.h  version.h  wset.h
include/host/: config.hpp  engine.hpp  global.hpp  interface_host.hpp  numa_run.hpp  upmem_direct.hpp  upmem_rank.hpp
src/: engine.cpp  main.cpp  upmem_rank.cpp
test/: analyze_sample_dpu.py  simulate_sample_dpu.cpp  test_ycsb.cpp
